<resources>
    <string name="app_name">Movies App</string>
    <string name="try_again">Tentar novamente</string>
    <string name="failed">O sistema falhou</string>
    <string name="try_again_msg">Por algum motivo, não foi possível processar com essa solicitação. Por favor, tente novamente.</string>
    <string name="search">Pesquisar por um filme...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="users_review_txt">Avaliação dos usuários</string>
    <string name="favorite">Favorito</string>
    <string name="banner_description">Imagem do filme</string>
    <string name="synopsis">Sinopse</string>
    <string name="cast">Elenco</string>
    <string name="return_home">Retornar</string>
    <string name="search_mode_title">Modo pesquisa</string>
    <string name="back_to_start">Voltar ao início</string>
    <string name="search_tag">Search</string>
    <string name="not_found">Esse filme não existe</string>
    <string name="not_found_msg">"Não conseguimos encontrar o filme que você procura. Por favor, refaça sua busca."</string>
    <string name="poster_press">Poster divulgação</string>
    <string name="favorite_movie">Filme favorito</string>
    <string name="users_rating">Avaliação dos usuários</string>
    <string name="all_movies">Todos os filmes</string>
    <string name="favorites">Favoritos</string>
    <string name="close_button">Fechar</string>
</resources>