<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.SearchResultFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutNotFound"
        android:layout_width="match_parent"
        android:layout_marginEnd="32dp"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layoutMovieFound"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible"
            tools:layout_editor_absoluteX="32dp">

            <ImageView
                android:id="@+id/imgTabSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:src="@drawable/tab_item_selector" />

            <TextView
                android:id="@+id/txtSearchModeTitle"
                style="@style/StandardTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="5dp"
                android:text="@string/search_mode_title" />

            <Button
                android:id="@+id/btnHome"
                style="@style/GreenTextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/back_to_start"
                android:textSize="18sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvBtnGenre"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                tools:listitem="@layout/model_genre_filled" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvItemModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:listitem="@layout/model_movie_item" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/txtNotFound"
            style="@style/StandardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:text="@string/not_found"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/txtNotFoundMsg"
            app:layout_constraintStart_toStartOf="@+id/txtNotFoundMsg"
            app:layout_constraintTop_toBottomOf="@+id/imgNotFound" />

        <ImageView
            android:id="@+id/imgNotFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/not_found"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/gldSearHor"
            app:layout_constraintEnd_toEndOf="@+id/txtNotFound"
            app:layout_constraintStart_toStartOf="@+id/txtNotFound"
            app:layout_constraintTop_toTopOf="@+id/gldSearHor" />

        <TextView
            android:id="@+id/txtNotFoundMsg"
            style="@style/SmallStandardText"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/not_found_msg"
            android:textAlignment="center"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtNotFound" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gldSearHor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="250dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdlSearchVert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>