<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button

        android:id="@+id/btnTryAgain"
        style="@style/ButtonTry"
        android:text="@string/try_again"
        app:layout_constraintEnd_toEndOf="@+id/txtTryAgainMsg"
        app:layout_constraintStart_toStartOf="@+id/txtTryAgainMsg"
        app:layout_constraintTop_toTopOf="@+id/gdlHorizontalInferior" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="0dp" />

    <TextView
        android:id="@+id/txtSystemFailed"
        style="@style/StandardTitle"
        android:layout_marginBottom="10dp"
        android:text="@string/failed"
        app:layout_constraintBottom_toTopOf="@+id/txtTryAgainMsg"
        app:layout_constraintEnd_toEndOf="@+id/txtTryAgainMsg"
        app:layout_constraintStart_toStartOf="@+id/txtTryAgainMsg" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdlVertical_0.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdlHorizontal_0.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="405dp" />

    <ImageView
        android:id="@+id/imgConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="34dp"
        app:layout_constraintBottom_toTopOf="@+id/txtSystemFailed"
        app:layout_constraintEnd_toEndOf="@+id/txtSystemFailed"
        app:layout_constraintStart_toStartOf="@+id/txtSystemFailed"
        app:srcCompat="@drawable/connection" />

    <TextView
        android:id="@+id/txtTryAgainMsg"
        style="@style/SmallStandardText"
        android:layout_width="372dp"
        android:layout_height="41dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/try_again_msg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gdlHorizontal_0.5" />

    <ImageView
        android:id="@+id/imgRectangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="76dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnTryAgain"
        app:layout_constraintStart_toStartOf="@+id/btnTryAgain"
        app:layout_constraintTop_toBottomOf="@+id/btnTryAgain"
        app:srcCompat="@drawable/tab_item_selector" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdlHorizontalInferior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="150dp" />

</androidx.constraintlayout.widget.ConstraintLayout>